--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 	</head>
 	<body>
 		<header>
-			<h1>Tendron</h1>
+			<h1>Fractal tree? no a weird mess of tendrils</h1>
+			<p>Not quite a mess though...</p>
+			<p>Seems to have a recursive/fractal pattern...</p>
 		</header>
 			<section id="content">
 				<canvas id="Tendron" data-processing-sources="Tendron.pde Cluster.pde Tendril.pde">
 				</canvas>
 		    </section>
 	    <footer>
+	    	Click to redraw and place the center of the Tendron in another location.
+	    	<br>
 		    Created by Rafael for APCS A (Java) with Processing
 	    </footer>
 	</body>
