update html to redirect to my website tendron page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 	<head>
-		<meta charset="utf-8">
+		<!--<meta charset="utf-8">
 		<title>Tendron</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="styles.css">
-		<script src="processing.js"></script>
-		
+		<link rel="stylesheet" href="/static/css/apjava.min.css">
+		<script src="https://rafaelcenzano.com/static/js/p5.min.js"></script>-->
+		<script type="text/javascript">window.location.replace("https://rafaelcenzano.com/apjava/tendron");</script>		
 	</head>
 	<body>
+		<!--
 		<header>
 			<h1>Fractal tree? no a weird mess of tendrils</h1>
 			<p>Not quite a mess though...</p>
@@ -21,6 +22,6 @@
 	    	Click to redraw and place the center of the Tendron in another location.
 	    	<br>
 		    Created by Rafael for APCS A (Java) with Processing
-	    </footer>
+	    </footer>-->
 	</body>
 </html>
